# oboe

include/oboe/: Definitions.h
samples/: .gitignore  build.gradle  gradle.properties  settings.gradle
samples/LiveEffect/: build.gradle
samples/LiveEffect/src/main/: AndroidManifest.xml
samples/LiveEffect/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  LiveEffectEngine.cpp  LiveEffectEngine.h  jni_bridge.cpp
samples/LiveEffect/src/main/java/com/google/oboe/samples/liveEffect/: LiveEffectEngine.java  MainActivity.java  Password.java
samples/LiveEffect/src/main/res/layout-v21/: activity_main.xml
samples/LiveEffect/src/main/res/values/: strings.xml
samples/LiveEffect/src/main/res/values-v21/: styles.xml
samples/SoundX/: build.gradle
samples/SoundX/src/main/: AndroidManifest.xml
samples/SoundX/src/main/cpp/: CMakeLists.txt  FullDuplexPass.h  LiveEffectEngine.cpp  LiveEffectEngine.h  jni_bridge.cpp
samples/SoundX/src/main/java/com/SoundX/: AudioService.java  CustomizeIA.java  DuplexStreamForegroundService.java  LiveEffectEngine.java  MainActivity.java  Password.java  PresetVibrations.java
samples/SoundX/src/main/java/com/google/oboe/samples/liveEffect/: CustomizeIA.java  CutomizeIA.java  LiveEffectEngine.java  MainActivity.java  Password.java  PresetVibrations.java  coucou.java
samples/SoundX/src/main/res/layout-v21/: activity_main.xml  devices.xml  options.xml  vibrations.xml
samples/SoundX/src/main/res/values/: strings.xml
samples/SoundX/src/main/res/values-v21/: styles.xml
samples/audio-device/src/main/java/com/google/oboe/samples/audio_device/: AudioDeviceAdapter.java  AudioDeviceListEntry.java
samples/gradle/wrapper/: gradle-wrapper.properties
